// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failed 1`] = `
.c4 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-all;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c4 a {
  color: #FFFFFF;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="sc-AxirZ sc-fzqBZW c0"
>
  <div
    class="sc-AxirZ sc-fzqBZW c1"
  >
    <div
      class="sc-fznZeY c2"
    >
      Kubernetes
    </div>
    <a
      class="c3"
      href="https://goteleport.com/docs/kubernetes-access/guides/multiple-clusters/"
      kind="primary"
      target="_blank"
      width="240px"
    >
      View documentation
    </a>
  </div>
  <div
    class="c4"
    kind="danger"
  >
    server error
  </div>
</div>
`;

exports[`loaded 1`] = `
.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c10 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c13 {
  display: inline-block;
  transition: color .3s;
  color: #FFFFFF;
}

.c15 {
  display: inline-block;
  transition: color .3s;
  margin-right: 8px;
  color: #FFFFFF;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: #FFFFFF;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 16px;
  line-height: 32px;
  margin: 24px;
  color: rgba(255,255,255,0.87);
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 24px;
  flex: 0 0 auto;
  display: flex;
}

.c11 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  border-radius: 8px;
  font-size: 12px;
  width: 100%;
}

.c11 > thead > tr > th,
.c11 > tbody > tr > th,
.c11 > tfoot > tr > th,
.c11 > thead > tr > td,
.c11 > tbody > tr > td,
.c11 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c11 > thead > tr > th:first-child,
.c11 > tbody > tr > th:first-child,
.c11 > tfoot > tr > th:first-child,
.c11 > thead > tr > td:first-child,
.c11 > tbody > tr > td:first-child,
.c11 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c11 > thead > tr > th:last-child,
.c11 > tbody > tr > th:last-child,
.c11 > tfoot > tr > th:last-child,
.c11 > thead > tr > td:last-child,
.c11 > tbody > tr > td:last-child,
.c11 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c11 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c11 > thead > tr > th .c9 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c11 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c11 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c11 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c11 tbody > tr:last-child td:first-child {
  border-bottom-left-radius: 8px;
}

.c11 tbody > tr:last-child td:last-child {
  border-bottom-right-radius: 8px;
}

.c8 {
  box-sizing: border-box;
  display: flex;
}

.c8 button {
  background: none;
  border: none;
  border-radius: 200px;
  cursor: pointer;
  padding: 0;
  margin: 0 0 0 8px;
  outline: none;
  transition: all 0.3s;
  text-align: center;
}

.c8 button:hover,
.c8 button:focus {
  background: #1C254D;
}

.c8 button:hover .c9,
.c8 button:focus .c9 {
  opacity: 1;
}

.c8 button .c9 {
  opacity: 0.4;
  font-size: 20px;
  transition: all 0.3s;
}

.c6 {
  padding: 8px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c5 {
  box-sizing: border-box;
  font-size: 12px;
  min-width: 200px;
  outline: none;
  border: none;
  border-radius: 200px;
  height: 32px;
  transition: all .2s;
  background: #222C59;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  color: rgba(255,255,255,0.87);
}

.c5:hover {
  background: #2C3A73;
}

.c5:focus,
.c5:active {
  background: #2C3A73;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c5::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c12 > tbody > tr > td {
  vertical-align: baseline;
}

.c1 {
  box-sizing: border-box;
  margin-bottom: 24px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c2 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  white-space: nowrap;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
  display: flex;
  overflow: auto;
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c0::after {
  content: ' ';
  padding-bottom: 24px;
}

<div
  class="sc-AxirZ c0"
>
  <div
    class="sc-AxirZ c1"
  >
    <div
      class="c2"
    >
      Kubernetes
    </div>
    <a
      class="c3"
      href="https://goteleport.com/docs/kubernetes-access/guides/multiple-clusters/"
      kind="primary"
      target="_blank"
      width="240px"
    >
      View documentation
    </a>
  </div>
  <div
    class="sc-AxirZ c4"
  >
    <input
      class="c5"
      color="text.primary"
      placeholder="SEARCH..."
      value=""
    />
  </div>
  <div>
    <nav
      class="c6"
    >
      <div
        class="c7"
        color="primary.contrastText"
      >
        SHOWING 
        <strong>
          0
        </strong>
         - 
        <strong>
          0
        </strong>
         
        of 
        <strong>
          0
        </strong>
      </div>
      <div
        class="sc-AxirZ c8"
      >
        <button
          disabled=""
          title="Previous Page"
        >
          <span
            class="c9 c10 icon icon-arrow-left-circle "
            color="light"
            font-size="3"
          />
        </button>
        <button
          disabled=""
          title="Next Page"
        >
          <span
            class="c9 c10 icon icon-arrow-right-circle "
            color="light"
            font-size="3"
          />
        </button>
      </div>
    </nav>
    <table
      class="c11 c12"
    >
      <thead>
        <tr>
          <th>
            <a>
              Name
              <span
                class="c9 c13 icon icon-chevron-down "
                color="light"
              />
            </a>
          </th>
          <th>
            Labels
          </th>
          <th />
        </tr>
      </thead>
      <tfoot>
        <tr>
          <td
            colspan="3"
          >
            <div
              class="c14"
              color="text.primary"
              style="display: flex; align-items: center; justify-content: center;"
            >
              <span
                class="c9 c15 icon icon-database "
                color="light"
              />
              No Data Available
            </div>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
  
</div>
`;
